# CandyBenchmarks

./: CMakeLists.txt  README.md  cb_cache_0.cpp  cb_create_vector_transform_vs_reduce.cpp  cb_map_vs_vector_lower_bound.cpp  cb_pmr_string_vector.cpp  cb_pmr_vector_vs_list.cpp  cb_rtti.cpp  cb_stride_accumulate.cpp  cb_variant_vs_polymorphism.cpp  cb_vector_copy.cpp  cb_vector_expr_tree.cpp  cb_vector_init.cpp  cb_vector_read.cpp  cb_vector_read_vs_cache.cpp  cb_vector_sum.cpp  cb_vector_vs_list.cpp  cb_vectorization.cpp  cb_vectorization2.cpp
